--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -38,6 +38,13 @@
         </context-group>
         <note priority="1" from="description">Yellow Fruits Title</note>
       </trans-unit>
+      <trans-unit id="choice.today_is" datatype="html">
+        <source>Today is</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/choice/choice.page.html</context>
+          <context context-type="linenumber">8</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="37626d8d235138af9916d96f23a8edf5c6fecfba" datatype="html">
         <source>The yellow fruits:</source>
         <context-group purpose="location">
