- Add date representation

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -1,6 +1,7 @@
 {
   "choice": {
-    "title": "Language choice"
+    "title": "Language choice",
+    "today_is": "Today is"
   },
   "menu": {
     "choice": "Language",
